--- a/Operatory część2/Operatory część2.vcxproj
+++ b/Operatory część2/Operatory część2.vcxproj
@@ -111,6 +111,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Gra.cpp" />
+    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Zawodnik.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Gra.h" />
+    <ClInclude Include="Header.h" />
+    <ClInclude Include="Zawodnik.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
